# zzz

./: CMakeLists.txt  README.md  main.cpp  testLog.cpp
include/: config.h  log.h  singleton.h  util.h
src/: config.cpp  log.cpp  singleton.cpp  util.cpp
test1/: CMakeLists.txt  test1.cpp
